--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -21,3 +21,12 @@
 
 </body>
 </html>
+
+<script>
+   var result = $.get('/db', (result) => {
+       console.log(result)
+   })
+</script>
+<script>
+    
+</script>
