Initial migration, include font-awesome, add login feature

--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/stylesheets/accueil.css"/>
         <meta charset="utf-8"/>
-        <title>Aquasmart</title>
+        <title>Hypo</title>
     </head>
     <body>
         <div id="global">
@@ -172,100 +172,23 @@
         </script>
 
         <script>
-            /*document.getElementById("image1").onclick = function(){
+            document.getElementById("image1").onclick = function(){
                 var id = this.getAttribute('id');
                 document.getElementById('range_value').innerHTML = id;
-            };*/
+            };
             
         </script>
 
         <script>
             jQuery(document).ready(function($){
-                var elmt;       
+                var elmt;    
                 $(".image1").on("click", function() {
                     window.menuSwitch(this)   
                 })
                 $(".image2").on("click", function() {
                     window.menuSwitch(this)   
                 })
-                    /*$(function($){
-                        if(elmt != document.getElementById("pic1"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic1");
-                            $('#pic1').css('opacity', '0.5');
-                        }
-                    });
-                });
-                /*$("#pic2").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("pic2"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic2");
-                            $('#pic2').css('opacity', '0.5');
-                        }
-                    });
-                });
-                $("#click_action").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("click_action"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("click_action");
-                        }
-                    });
-                });
-                $("#pic4").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("pic4"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic4");
-                            $('#pic4').css('opacity', '0.5');
-                        }
-                    });
-                });
-                $("#pic5").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("pic5"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic5");
-                            $('#pic5').css('opacity', '0.5');
-                        }
-                    });
-                });
-                $("#pic6").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("pic6"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic6");
-                            $('#pic6').css('opacity', '0.5');
-                        }
-                    });
-                });
-                $("#pic7").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("pic7"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic7");
-                            $('#pic7').css('opacity', '0.5');
-                        }
-                    });
-                });
-                $("#pic8").on("click", function(){
-                    $(function($){
-                        if(elmt != document.getElementById("pic8"))
-                        {
-                            $(elmt).css('opacity', '1');
-                            elmt = document.getElementById("pic8");
-                            $('#pic8').css('opacity', '0.5');
-                        }
-                    });
-                });*/
+                   
             });
         </script>
         <script>
