manage user sessions with express-session module

--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -172,10 +172,10 @@
         </script>
 
         <script>
-            document.getElementById("image1").onclick = function(){
+            /*document.getElementById("image1").onclick = function(){
                 var id = this.getAttribute('id');
                 document.getElementById('range_value').innerHTML = id;
-            };
+            };*/
             
         </script>
 
