adding home page #1

--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -10,6 +10,7 @@
             <header>
             </header>
             <div id="first_split">
+                <!--Menu Vertical Gauche-->
                 <nav>
                     <ul id="menu">
                         <li class="image1" id="pic1"><a href="#"></a></li>
@@ -24,6 +25,7 @@
                         <li class="image1" id="pic8"><a href="#"></a></li>
                     </ul> 
                 </nav>
+                <!-- Fin Menu Vertical Gauche-->
                 <section>
                     <div id="choix_utilisateur">
                         <div id="button1_div">
@@ -121,6 +123,38 @@
                         </div>
                     </div>
                 </section>
+            </div>
+            <div id="second_split">
+                <session>
+                    <div id="sensor_values_table">
+                        <div id="top_table">
+                            <div class="table_line">
+                                <div class="sensor_values">
+                                    <label>Valeur température (°C)</label>
+                                    <span class="span_table_value">22.3</span>
+                                </div>
+                            </div>
+                            <div class="table_line">
+                                <div class="sensor_values">
+                                    <label>Valeur PH</label>
+                                    <span class="span_table_value">22.3</span>
+                                </div>
+                            </div>
+                            <div class="table_line">
+                                <div class="sensor_values">
+                                    <label>Niveau de fertilisant</label>
+                                    <span class="span_table_value"></span>
+                                </div>
+                            </div>
+                            <div id="top_table_right">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div id="picture">
+                        
+                    </div>
+                </session>
             </div>
             <footer>
 
